--- a/www/css/style.css
+++ b/www/css/style.css
@@ -632,6 +632,22 @@ ul.services li h5{
 	color: #f88703;
 	margin: 0 0 7px;
 }
+.news ul{
+	width: 217px;
+	float: left;
+	margin: 9px 0 10px;
+}
+.news ul li{
+	margin: 0 0 5px;
+}
+.news ul li a{
+	color: #7f96a6;
+	text-decoration: underline;
+	font-style: italic;
+}
+.news ul li a:hover{
+	text-decoration: none;
+}
 
 /* ---------------- Sidebar -------------------*/
 .sidebar aside{
