fix list title in sidebar

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -432,7 +432,7 @@ header .reg_menu_block ul.main_menu li:last-child a:after{
 }
 .block_filter_apart .filter_form{
 	float: left;
-	padding: 0 0 8px;
+	padding: 0 0 10px;
 	border-bottom: 1px solid #a6a9b2;
 	position: relative;
 }
@@ -496,6 +496,9 @@ header .reg_menu_block ul.main_menu li:last-child a:after{
 	height: 13px;
 	vertical-align: middle;
 }
+.block_filter_apart .filter_form p{
+	margin: 0 0 10px;
+}
 .block_filter_apart .filter_form  h5.title_number:before{
 	background-position: -163px -25px;
 	width: 9px;
@@ -514,7 +517,7 @@ header .reg_menu_block ul.main_menu li:last-child a:after{
 }
 .block_filter_apart .filter_form  h5.title_property,
 .block_filter_apart .filter_form  h5.title_budget_filter{
-	margin-top: 0;
+	margin: 0 0 8px;
 }
 .block_filter_apart .filter_form  select{
 	width: 176px;
@@ -579,7 +582,7 @@ ul.paginator_room li a.active{
 	font-size: 14px;
 	font-weight: bold;
 	color: #313f52;
-	border-radius: 5px;
+	border-radius: 7px;
 	bottom: 13px;
 	width: 113px;
 	padding: 0;
@@ -657,7 +660,7 @@ h3.subtitle{
 	width: 298px;
 	font-size: 18px;
 	color: #232325;
-	padding: 12px 10px 8px;
+	padding: 11px 10px 9px;
 	box-shadow: #FCFCFC 0 -4px 10px inset, #b0b0b0 1px 0 0;
 	border-bottom: 1px solid #d2d2d0;
 	background: #f9f9f9; /* Old browsers */
