--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1048,9 +1048,12 @@ ul.services li p{
 }
 .block_single_top .description{
 	float: left;
+	margin: 0 0 0 10px;
+	width: 250px;
 }
 .block_single_top .price_button{
 	float: right;
+	text-align: right;
 }
 /* -------------- end Single ----------------- */
 
@@ -1734,11 +1737,7 @@ footer .newsletter_block p{
 	margin: 0 0 7px;
 }
 footer .newsletter_block a{
-<<<<<<< HEAD
 	text-shadow: 1px 1px 0 #fff;
-=======
-	text-shadow:1px 1px 0 #fff;
->>>>>>> dd3e5fd8604146dac945d78e7d679f97a7ff69c4
 	padding: 7px 0 6px;
 	width: 124px;
 	font-size: 14px;
