--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1253,6 +1253,9 @@ ul.services li p{
 	width: 15px;
 	height: 16px;
 }
+.sidebar aside a.contact_button{
+	margin: 0 0 0 34px;
+}
 /* ------------ Search result page---------------*/
 .search_filter_block{
 	width: 209px;
