--- a/www/css/style.css
+++ b/www/css/style.css
@@ -158,7 +158,7 @@ h5{
 }
 .search_button i{
 	border-left: 1px solid #fff;
-	background: url(../images/filter_button.png) no-repeat center;
+	background: url('../images/sprite.png') no-repeat -235px 6px;
 	display: inline-block;
 	height: 26px;
 	width: 35px;
@@ -267,7 +267,7 @@ header .reg_menu_block .reg_block form button:before{
 	top: -1px;
 	width: 14px;
 	height: 23px;
-	background: url(../images/reg_arrow.png) no-repeat;
+	background: url('../images/sprite.png') no-repeat 0 -36px;
 }
 header .reg_menu_block .reg_block a.reg_link{
 	font-size: 13px;
@@ -326,7 +326,7 @@ header .reg_menu_block ul.main_menu li:last-child a:after{
 	display: block;
 	height: 26px;
 	width: 26px;
-	background: url(../images/add_button.png);
+	background: url('../images/sprite.png') no-repeat 0 0;
 	position: absolute;
 	top: 5px;
 	left: 43px;
@@ -420,14 +420,16 @@ header .reg_menu_block ul.main_menu li:last-child a:after{
 	height: 58px;
 	top: 76px;
 	display: block;
+	background: url('../images/sprite.png') no-repeat;
 }
 .slider a.prev_button{
 	left: 11px;
-	background: url(../images/prev_button.png);
+	background-position: -77px 0;
+	
 }
 .slider a.next_button{
 	right: 11px;
-	background: url(../images/next_button.png);
+	background-position:  -43px 0;
 }
 
 .block_filter_apart{
